update paypal url

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,7 +1,7 @@
 <h2 class="h3">A WORD TO OUR SPONSORS</h2> <div class="row">
     <div class="column">
         <h2 class="h2">DONATE</h2>
-        <a href="https://www.paypal.com/donate/?token=Sm-M0SMCYi2Aso9XLGEYRIRbktC4-Ik4cgTIVY4F59KTBlVpvQwvQKwCMkBuJca0V5K18G&amp;country.x=GB&amp;locale.x=GB">
+        <a href="https://www.paypal.com/donate/?token=vGQhhqj0lTnT5w2siZMyO_gM95cuyUftOl37HhlpDfp3n-jkRuZW9-q9a0MaojEZT5tU0W">
             <img src="/img/paypal.png" style="width:100%" class="linkimg">
         </a>
     </div>
