reverse sort; rename variable

--- a/templates/view.html
+++ b/templates/view.html
@@ -18,7 +18,7 @@
     <br>
     <h1 class="h1">Our latest uploads:</h1>
     <br>
-{% for i, file in ipairs(local_latest) do %}
+{% for i, file in ipairs(local_latestpath) do %}
     <a class="amixlink" href="{{ '/mixes/' .. file }}">
         <span class="mixlink">{{ local_latestname[i] }}</span>
     </a>
