--- a/templates/head.html
+++ b/templates/head.html
@@ -12,5 +12,5 @@
     </a>
 </header>
 <body class="body">
-    <h1 class="h1">No Fancy Stuff - Downloads Only.<br>
+    <h1 class="h1">No Fancy Stuff - Downloads & Streams (right click + save as for downloads).<br>
         Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives</h1>
