--- a/templates/head.html
+++ b/templates/head.html
@@ -12,5 +12,7 @@
     </a>
 </header>
 <body class="body">
-    <h1 class="h1">No Fancy Stuff - Downloads & Streams (right click + save as for downloads).<br>
-        Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives</h1>
+    <h1 class="h1">No Fancy Stuff - Downloads & Streams (right click + save as for downloads)<br>
+        Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives<br>
+        Sharing {{ local_total[0] }} files
+    </h1>
