update header text

--- a/templates/head.html
+++ b/templates/head.html
@@ -12,7 +12,7 @@
     </a>
 </header>
 <body class="body">
-    <h1 class="h1">No Fancy Stuff - Downloads & Streams (right click + save as for downloads)<br>
+    <h1 class="h1">Tons Of Mix - Downloads & Streams (right click + save as for downloads)<br>
         Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives<br>
         Sharing {{ local_total[0] }} files
     </h1>
