ignore width on img

--- a/templates/view.html
+++ b/templates/view.html
@@ -4,7 +4,7 @@
     <div class="image_collage">
 {% for i, image in ipairs(local_images) do %}
         <a href="{{ local_path .. image }}">
-            <img src="{{ local_path .. image }}" width="40%">
+            <img src="{{ local_path .. image }}">
         </a>
 {% end %}
     </div>
