--- a/templates/head.html
+++ b/templates/head.html
@@ -8,7 +8,7 @@
 </head>
 <header class="header">
     <a href="/">
-        <img src="/img/hotmixwhite.png" class="hotmixlogo"/>
+        <img src="/img/hotmixeswhite.png" class="hotmixlogo"/>
     </a>
 </header>
 <body class="body">
