new styles; fancy root page

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -1,33 +1,37 @@
-<h2 class="h3">A WORD TO OUR SPONSORS</h2> <div class="row">
-    <div class="column">
-        <h2 class="h2">DONATE</h2>
-        <a href="https://www.paypal.com/donate/?token=vGQhhqj0lTnT5w2siZMyO_gM95cuyUftOl37HhlpDfp3n-jkRuZW9-q9a0MaojEZT5tU0W">
-            <img src="/img/paypal.png" style="width:100%" class="linkimg">
-        </a>
-    </div>
-    <div class="column">
-        <h2 class="h2">DIGI SHOP</h2>
-        <a href="https://viewlexx.bandcamp.com/">
-            <img src="/img/digishop-new.png" style="width:100%" class="linkimg">
-        </a>
-    </div>
-    <div class="column">
-        <h2 class="h2">INTERGALACTIC FM</h2>
-        <a href="https://www.intergalactic.fm/">
-            <img src="/img/ifmlogo.png" style="width:100%">
-        </a>
-    </div>
-    <div class="column">
-        <h2 class="h2">INTERGALACTIC FM SHOP</h2>
-        <a href="https://intergalactic.fm/shop">
-            <img src="/img/tshirt.png" style="width:100%">
-        </a>
-    </div>
-</div> <footer class="footer">
-    <a href="http://hotmixes.net/">
-        <img src="/img/hotmixgrey.png" class="hotmixlogo"/>
-    </a>
-    <p class="p footerlegal">Copyright Hotmix Foundation / IFMX 2020</p>
-</footer>
-</body>
+        <section class="sponsors">
+            <h2 class="h2">A WORD TO OUR SPONSORS</h2>
+            <div class="row">
+                <div class="column">
+                    <h2 class="h2">DONATE</h2>
+                    <a href="https://www.paypal.com/donate/?token=vGQhhqj0lTnT5w2siZMyO_gM95cuyUftOl37HhlpDfp3n-jkRuZW9-q9a0MaojEZT5tU0W">
+                        <img src="/img/paypal.png" style="width:100%" class="linkimg">
+                    </a>
+                </div>
+                <div class="column">
+                    <h2 class="h2">DIGI SHOP</h2>
+                    <a href="https://viewlexx.bandcamp.com/">
+                        <img src="/img/digishop-new.png" style="width:100%" class="linkimg">
+                    </a>
+                </div>
+                <div class="column">
+                    <h2 class="h2">INTERGALACTIC FM</h2>
+                    <a href="https://www.intergalactic.fm/">
+                        <img src="/img/ifmlogo.png" style="width:100%">
+                    </a>
+                </div>
+                <div class="column">
+                    <h2 class="h2">INTERGALACTIC FM SHOP</h2>
+                    <a href="https://intergalactic.fm/shop">
+                        <img src="/img/tshirt.png" style="width:100%">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <a href="http://hotmixes.net/">
+                <img src="/img/hotmixgrey.png" class="hotmixlogo"/>
+            </a>
+            <p class="p footerlegal">Copyright Hotmix Foundation / IFMX 2020</p>
+        </footer>
+    </body>
 </html>
