--- a/templates/head.html
+++ b/templates/head.html
@@ -1,18 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>Hotmixes.net</title>
-<link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
-<style>
-    @import url('https://fonts.googleapis.com/css?family=Staatliches');
-</style>
-</head>
-<header class="header">
-    <a href="/">
-        <img src="/img/hotmixeswhite.png" class="hotmixlogo"/>
-    </a>
-</header>
-<body class="body">
-    <h1 class="h1">Tons Of Mix - Downloads & Streams (right click + save as for downloads)<br>
-        Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives<br>
-        Sharing {{ local_total[0] }} files
-    </h1>
+    <head>
+        <title>Hotmixes.net</title>
+        <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
+        <style>
+            @import url('https://fonts.googleapis.com/css?family=Staatliches');
+        </style>
+    </head>
+    <body class="body">
+        <header class="header">
+            <a href="/">
+                <img src="/img/hotmixeswhite.png" class="hotmixlogo"/>
+            </a>
+        </header>
+        <h1 class="h1 h1mobile">Tons Of Mix - Downloads & Streams (right click + save as for downloads)<br>
+            Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives<br>
+            Sharing {{ local_total[0] }} files</h1>
