--- a/templates/view.html
+++ b/templates/view.html
@@ -24,15 +24,17 @@
 {% end %}
 </div>
 
-<div class="latest_files">
-    <br>
-    <h1 class="h1">Our latest uploads:</h1>
-    <br>
-{% for i, file in ipairs(local_latestpath) do %}
-    <a class="amixlink" href="{{ '/mixes/' .. file }}">
-        <span class="mixlink">{{ local_latestname[i] }}</span>
-    </a>
-    </br>
-{% end %}
-</div>
+<section class="latest">
+    <div class="latest_files">
+        <br>
+        <br>
+        <h1 class="h1">Our latest uploads:</h1>
+    {% for i, file in ipairs(local_latestpath) do %}
+        <a class="amixlink" href="{{ '/mixes/' .. file }}">
+            <span class="mixlink">{{ local_latestname[i] }}</span>
+        </a>
+        </br>
+    {% end %}
+    </div>
+</section>
 {(foot.html)}
