--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -6,7 +6,7 @@
     border-bottom: 3px solid#e2001a;
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 15px;
     margin-top: 0px;
     line-height: 1em;
 }
@@ -27,21 +27,38 @@
 
 .mixlink
 {
-    font-family: helvetica;
-    color: #9d9d9d;
-    line-height: 1.6em;
+    line-height: 16px;
     font-weight: 600;
     font-size: 14px;
-    text-decoration: inherit;
+    margin-bottom: 0;
+    margin-top: 0;
+    font-family: helvetica, arial, san serif;
 }
 
-.amixlink{
+.amixlink
+{
     font-family: helvetica;
     color: #9d9d9d;
     line-height: 1.6em;
     font-weight: 600;
     font-size: 14px;
-    text-decoration: underline;
+    text-decoration: none;
+    background: #111111;
+    display: inline-flex;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding: 2px 10px;
+    border-radius: 20px;
+}
+
+.amixlink:hover
+{
+    font-family: helvetica;
+    color: #000;
+    line-height: 1.6em;
+    font-weight: 600;
+    font-size: 14px;
+    background: #e2001a;
 }
 
 .body
@@ -96,9 +113,11 @@
     width: 100%;
     height: 250px;
     border-top: 2PX SOLID #e2001a;
+    float: left;
+    clear: both;
 }
 
-null
+.djsection
 {
     font-family: staatliches;
     font-size: 18px;
@@ -106,9 +125,29 @@ null
     color: e2001a;
 }
 
-.djsection
+.djsectionmenu
 {
     font-family: staatliches;
+    font-size: 33px;
+    color: #e2001a;
+    line-height: 1em;
+    z-index: 100;
+    display: block;
+    width: 10%;
+    height: 130px;
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    min-width: 130px;
+}
+
+.djsectionmenu:hover
+{
+    background-color: #e3301a;
+}
+
+.djsection
+{   font-family: staatliches;
     font-size: 33px;
     color: e2001a;
     line-height: 1em;
@@ -116,9 +155,11 @@ null
     margin-top: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
+
 }
 
-.h3
+
+.h2
 {
     font-family: staatliches;
     color: #e2001a;
@@ -170,15 +211,6 @@ null
     display: table;
 }
 
-.row
-{
-    height: 250px;
-    margin-bottom: 10px;
-    margin-top: 30px;
-    padding-right: 0px;
-    padding-left: 0px;
-}
-
 @media screen and (max-width: 768px)
 {
     .column
@@ -228,43 +260,144 @@ null
 {
     line-height: 0;
     -webkit-column-count: 5;
-    -webkit-column-gap:   0px;
-    -moz-column-count:    5;
-    -moz-column-gap:      0px;
-    column-count:         5;
-    column-gap:           0px;
+    -webkit-column-gap: 0px;
+    -moz-column-count: 5;
+    -moz-column-gap: 0px;
+    column-count: 5;
+    column-gap: 0px;
 }
 
-.image_collage img {
+.image_collage img
+{
     width: 100% !important;
     height: auto !important;
 }
 
-@media (max-width: 1200px) {
-    .image_collage {
-    -moz-column-count:    4;
-    -webkit-column-count: 4;
-    column-count:         4;
+@media (max-width: 1200px)
+{
+    .image_collage
+    {
+        -moz-column-count: 4;
+        -webkit-column-count: 4;
+        column-count: 4;
     }
-  }
-  @media (max-width: 1000px) {
-    .image_collage {
-    -moz-column-count:    3;
-    -webkit-column-count: 3;
-    column-count:         3;
+}
+
+@media (max-width: 1000px)
+{
+    .image_collage
+    {
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
-  }
-  @media (max-width: 800px) {
-    .image_collage {
-    -moz-column-count:    2;
-    -webkit-column-count: 2;
-    column-count:         2;
+}
+
+@media (max-width: 800px)
+{
+    .image_collage
+    {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
     }
-  }
-  @media (max-width: 400px) {
-    .image_collage {
-    -moz-column-count:    1;
-    -webkit-column-count: 1;
-    column-count:         1;
+}
+
+@media (max-width: 400px)
+{
+    .image_collage
+    {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
     }
-  }
+}
+
+.alphabetpanel
+{
+    width: 100%;
+    float: left;
+    border-top: 1px dotted;
+    background-repeat: repeat;
+    overflow: hidden;
+    height: 100%;
+}
+
+@media (min-width:500px)
+{
+    .alphabetimg
+    {
+        position: relative;
+        float: none;
+        top: 5px;
+        left: 5px;
+        height: 200px;
+    }
+}
+
+.alphabetgrid
+{
+    width: 100%;
+    margin-top: 40px;
+    padding-left: auto;
+    padding-right: auto;
+}
+
+.latest
+{
+    position: relative;
+    clear: both;
+}
+
+.latestdiv
+{
+    width: 100%;
+    position: relative;
+    clear: both;
+    float: left;
+}
+
+.alphabet
+{
+    width: 100%;
+    margin-bottom: 40px;
+    float: left;
+    clear: both;
+    margin-top: 20PX;
+}
+
+.sponsors
+{
+    margin-top: 20px;
+    clear: both;
+    float: left;
+}
+
+@media (max-width:499px)
+{
+    .djsectionmenu500
+    {
+        height: 70px;
+        overflow: hidden;
+        min-width: 60px;
+        width: 50%;
+    }
+    .alphabetimg500
+    {
+        height: 100px;
+    }
+    .alphabetpanel480down
+    {
+        height: 70px;
+        overflow: hidden;
+        width: 100px;
+    }
+}
+
+@media (max-width:767px)
+{
+    .h1mobile
+    {
+        font-size: 18px;
+    }
+}
