--- a/templates/foot.html
+++ b/templates/foot.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="column">
                     <h2 class="h2">DONATE</h2>
-                    <a href="https://www.paypal.com/donate/?token=vGQhhqj0lTnT5w2siZMyO_gM95cuyUftOl37HhlpDfp3n-jkRuZW9-q9a0MaojEZT5tU0W">
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=wxb3w2ql8c4z4">
                         <img src="/img/paypal.png" style="width:100%" class="linkimg">
                     </a>
                 </div>
