update shop link

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="column">
                     <h2 class="h2">INTERGALACTIC FM SHOP</h2>
-                    <a href="https://intergalactic.fm/shop">
+                    <a href="http://shop.intergalactic.fm">
                         <img src="/img/tshirt.png" style="width:100%">
                     </a>
                 </div>
