--- a/templates/foot.html
+++ b/templates/foot.html
@@ -2,7 +2,13 @@
             <h2 class="h2">A WORD TO OUR SPONSORS</h2>
             <div class="row">
                 <div class="column">
-                    <h2 class="h2">DONATE</h2>
+                    <h2 class="h2">Bank/CC donations</h2>
+                    <a href="http://donate.intergalactic.fm">
+                        <img src="/img/cards.png" style="width:100%" class="linkimg">
+                    </a>
+                </div>
+                <div class="column">
+                    <h2 class="h2">PAYPAL DONATIONS</h2>
                     <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=wxb3w2ql8c4z4">
                         <img src="/img/paypal.png" style="width:100%" class="linkimg">
                     </a>
