--- a/templates/foot.html
+++ b/templates/foot.html
@@ -22,19 +22,19 @@
                 <div class="column">
                     <h2 class="h2">INTERGALACTIC FM</h2>
                     <a href="https://www.intergalactic.fm/">
-                        <img src="/img/ifmlogo.png" style="width:100%">
+                        <img src="/img/ifmlogo.png" style="width:100%" class="linkimg">
                     </a>
                 </div>
                 <div class="column">
                     <h2 class="h2">INTERGALACTIC FM SHOP</h2>
                     <a href="http://shop.intergalactic.fm">
-                        <img src="/img/tshirt.png" style="width:100%">
+                        <img src="/img/tshirt.png" style="width:100%" class="linkimg">
                     </a>
                 </div>
             </div>
         </section>
         <footer class="footer">
-            <a href="http://hotmixes.net/">
+            <a href="/">
                 <img src="/img/hotmixgrey.png" class="hotmixlogo"/>
             </a>
             <p class="p footerlegal">Copyright Hotmix Foundation / IFMX 2020</p>
