sets previews are working, but visual feedback is not ready yet

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -40,4 +40,6 @@
             <p class="p footerlegal">Copyright Hotmix Foundation / IFMX 2020</p>
         </footer>
     </body>
+    <script type="text/javascript" src="/js/lib/umbrella.min.js"></script>
+    <script type="text/javascript" src="/js/preview.js"></script>
 </html>
