--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -96,7 +96,7 @@
     font-family: Staatliches;
     font-size: 24px;
     color: #4c4c4c;
-    font-weight: 200;
+    font-weight: 200;: 0;
     border-bottom: 2px solid #4c4c4c;
     margin-bottom: 0px;
 }
@@ -382,6 +382,95 @@
 .linkimg:hover
 {
     filter: invert(70%);
+}
+
+/* tooltips are based on https://designshack.net/articles/css/html5-css3-anchor-link-tooltips/*/
+a.tooltip{
+    position: relative;
+    display: inline;
+}
+a.tooltip:after{
+    display: block;
+    visibility: hidden;
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    opacity: 0;
+    content: attr(data-tool); /* might also use attr(title) */
+    height: auto;
+    min-width: 100px;
+    padding: 5px 8px;
+    z-index: 999;
+    color: #9d9d9d;
+    line-height: 13px;
+    font-weight: 600;
+    font-size: 13px;
+    font-family: helvetica, arial, san serif;
+    text-decoration: none;
+    text-align: center;
+    background: rgba(0,0,0,0.85);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 20px;
+}
+
+a.tooltip:before {
+    position: absolute;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    left: 50%;
+    bottom: 0px;
+    opacity: 0;
+    content: "";
+    border-style: solid;
+    border-width: 6px 6px 0 6px;
+    border-color: rgba(0,0,0,0.85) transparent transparent transparent;
+}
+a.tooltip:hover:after{ visibility: visible; opacity: 1; bottom: 20px; }
+a.tooltip:hover:before{ visibility: visible; opacity: 1; bottom: 14px; }
+
+/* tips on bottom */
+a.tooltip.bottom:after { bottom: auto; top: 0; }
+a.tooltip.bottom:hover:after { top: 28px; }
+a.tooltip.bottom:before {
+    border-width: 0 5px 8.7px 5px;
+    border-color: transparent transparent rgba(0,0,0,0.85) transparent;
+    top: 0px
+}
+a.tooltip.bottom:hover:before { top: 20px; }
+
+
+/* tips on the right */
+a.tooltip.right:after { left: 100%; bottom: -45%; }
+a.tooltip.right:hover:after { left: 110%; bottom: -45%; }
+a.tooltip.right:before {
+    border-width: 5px 10px 5px 0;
+    border-color: transparent rgba(0,0,0,0.85) transparent transparent;
+    left: 90%;
+    bottom: 2%;
+}
+a.tooltip.right:hover:before { left: 100%; bottom: 2%; }
+
+
+/* tips on the left */
+a.tooltip.left:after { left: auto; right: 100%; bottom: -45%; }
+a.tooltip.left:hover:after { right: 110%; bottom: -45%; }
+a.tooltip.left:before {
+    border-width: 5px 0 5px 10px;
+    border-color: transparent transparent transparent rgba(0,0,0,0.85);
+    left: auto;
+    right: 90%;
+    bottom: 2%;
+}
+a.tooltip.left:hover:before { right: 100%; bottom: 2%; }
+
+a.tooltip.animate:after, a.tooltip.animate:before {
+    -webkit-transition: all 3s ease-out 0.1s;
+    -moz-transition: all 3s ease-out 0.1s;
+    -ms-transition: all 3s ease-out 0.1s;
+    -o-transition: all 3s ease-out 0.1s;
+    transition: all 3s ease-out 0.1s;
 }
 
 @media (max-width:499px)
