--- a/templates/view.html
+++ b/templates/view.html
@@ -17,8 +17,8 @@
     <br>
 
 {% for i, file in ipairs(local_files) do %}
-    <a class="amixlink" href="{{ local_path .. file }}">
-        <span class="mixlink">{{ file }}</span>
+    <a class="amixlink tooltip right animate" data-tool="Previewing" href="{{ local_path .. file }}">
+        <span>{{ file }}</span>
     </a>
     </br>
 {% end %}
@@ -30,7 +30,7 @@
         <br>
         <h1 class="h1">Our latest uploads:</h1>
     {% for i, file in ipairs(local_latestpath) do %}
-        <a class="amixlink" href="{{ '/mixes/' .. file }}">
+        <a class="amixlink tooltip right animate" data-tool="Previewing" href="{{ '/mixes/' .. file }}">
             <span class="mixlink">{{ local_latestname[i] }}</span>
         </a>
         </br>
