--- a/templates/view.html
+++ b/templates/view.html
@@ -18,7 +18,8 @@
 
     {% for i, file in ipairs(local_files) do %}
     <div class="mix-holder">
-        <a href="#" class="tooltip right animate" data-tool="Previewing"><img src="/img/music-player.svg" class="preview-icon"/></a>
+<!--        <a href="#" class="tooltip right animate" data-tool="Previewing"><img src="/img/music-player.svg" class="preview-icon"/></a>-->
+        <img src="/img/music-player.svg" class="preview-icon"/>
         <a class="amixlink "href="{{ local_path .. file }}">
             <span>{{ file }}</span>
         </a>
@@ -34,7 +35,7 @@
         <h1 class="h1">Our latest uploads:</h1>
         {% for i, file in ipairs(local_latestpath) do %}
         <div class="mix-holder">
-            <a href="#" class="tooltip right animate" data-tool="Previewing"><img src="/img/music-player.svg" class="preview-icon"/></a>
+            <img src="/img/music-player.svg" class="preview-icon"/>
             <a class="amixlink tooltip right animate" data-tool="Previewing" href="{{ '/mixes/' .. file }}">
                 <span class="mixlink">{{ local_latestname[i] }}</span>
             </a>
