previews worden nu via howler gestart en gestopt

--- a/templates/foot.html
+++ b/templates/foot.html
@@ -41,5 +41,6 @@
         </footer>
     </body>
     <script type="text/javascript" src="/js/lib/umbrella.min.js"></script>
+    <script type="text/javascript" src="/js/lib/howler.core.min.js"></script>
     <script type="text/javascript" src="/js/preview.js"></script>
 </html>
