--- a/templates/view.html
+++ b/templates/view.html
@@ -21,7 +21,7 @@
 <!--        <a href="#" class="tooltip right animate" data-tool="Previewing"><img src="/img/music-player.svg" class="preview-icon"/></a>-->
         <img src="/img/music-player.svg" class="preview-icon"/>
         <a class="amixlink "href="{{ local_path .. file }}">
-            <span>{{ file }}</span>
+            <span class="mixlink">{{ file }}</span>
         </a>
     </div>
     </br>
@@ -36,7 +36,7 @@
         {% for i, file in ipairs(local_latestpath) do %}
         <div class="mix-holder">
             <img src="/img/music-player.svg" class="preview-icon"/>
-            <a class="amixlink tooltip right animate" data-tool="Previewing" href="{{ '/mixes/' .. file }}">
+            <a class="amixlink" data-tool="Previewing" href="{{ '/mixes/' .. file }}">
                 <span class="mixlink">{{ local_latestname[i] }}</span>
             </a>
         </div>
