--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -1,9 +1,8 @@
-.h1
-{
+.h1 {
     font-family: Staatliches;
     color: #e2001a;
     border-top: 3px solid #e2001a;
-    border-bottom: 3px solid#e2001a;
+    border-bottom: 3px solid #e2001a;
     padding-top: 5px;
     padding-bottom: 5px;
     margin-bottom: 15px;
@@ -11,22 +10,19 @@
     line-height: 1em;
 }
 
-.p
-{
+.p {
     font-family: helvetica;
     color: #7e7e7e;
     margin-bottom: 45px;
     font-size: 10px;
 }
 
-.href
-{
+.href {
     font-family: helvetica;
     text-decoration: none;
 }
 
-.mixlink
-{
+.mixlink {
     line-height: 16px;
     font-weight: 600;
     font-size: 14px;
@@ -35,8 +31,7 @@
     font-family: helvetica, arial, san serif;
 }
 
-.amixlink
-{
+.amixlink {
     font-family: helvetica;
     color: #9d9d9d;
     line-height: 1.6em;
@@ -51,8 +46,7 @@
     border-radius: 20px;
 }
 
-.amixlink:hover
-{
+.amixlink:hover {
     font-family: helvetica;
     color: #000;
     line-height: 1.6em;
@@ -61,16 +55,14 @@
     background: #e2001a;
 }
 
-.body
-{
+.body {
     width: 80%;
     padding-left: 10%;
     padding-right: 10%;
     background-color: #222222;
 }
 
-.mixsections
-{
+.mixsections {
     font-family: staatliches;
     font-weight: 900;
     font-size: 16px;
@@ -83,8 +75,7 @@
     text-decoration: none;
 }
 
-.hotmixlogo
-{
+.hotmixlogo {
     width: 150px;
     padding-bottom: 0px;
     padding-left: 10px;
@@ -97,8 +88,7 @@ img.preview-icon {
     padding: 0;
 }
 
-.h2
-{
+.h2 {
     font-family: Staatliches;
     font-size: 24px;
     color: #4c4c4c;
@@ -107,15 +97,13 @@ img.preview-icon {
     margin-bottom: 0px;
 }
 
-.header
-{
+.header {
     width: 100%;
     background-image: url('/img/header.png');
     max-height: 185px;
 }
 
-.footer
-{
+.footer {
     width: 100%;
     height: 250px;
     border-top: 2PX SOLID #e2001a;
@@ -123,16 +111,14 @@ img.preview-icon {
     clear: both;
 }
 
-.djsection
-{
+.djsection {
     font-family: staatliches;
     font-size: 18px;
     text-decoration: inherit;
     color: e2001a;
 }
 
-.djsectionmenu
-{
+.djsectionmenu {
     font-family: staatliches;
     font-size: 33px;
     color: #e2001a;
@@ -147,13 +133,11 @@ img.preview-icon {
     min-width: 130px;
 }
 
-.djsectionmenu:hover
-{
+.djsectionmenu:hover {
     background-color: #e3301a;
 }
 
-.djsection
-{
+.djsection {
     font-family: staatliches;
     font-size: 33px;
     color: e2001a;
@@ -166,13 +150,11 @@ img.preview-icon {
     padding-bottom: 5px;
 }
 
-.djsection:hover
-{
+.djsection:hover {
     background-color: #000;
 }
 
-.h2
-{
+.h2 {
     font-family: staatliches;
     color: #e2001a;
     font-size: 24px;
@@ -180,24 +162,20 @@ img.preview-icon {
     border-bottom: 2px solid #e2001a;
 }
 
-.homeheader
-{
+.homeheader {
     background-image: url('/img/header.png');
     background-repeat: no-repeat;
     padding-bottom: 20px;
 }
 
-.bottomimg
-{
+.bottomimg {
 }
 
-.imglink
-{
+.imglink {
     width: 200px;
 }
 
-.footerlegal
-{
+.footerlegal {
     right: 0;
     float: right;
     margin-top: 80px;
@@ -205,8 +183,7 @@ img.preview-icon {
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 
-.column
-{
+.column {
     float: left;
     margin-left: 0px;
     padding-left: 2.5%;
@@ -216,43 +193,37 @@ img.preview-icon {
 
 /* Clear floats after image containers */
 
-.row::after
-{
+.row::after {
     content: "";
     clear: both;
     display: table;
 }
 
-@media screen and (max-width: 768px)
-{
-    .column
-    {
+@media screen and (max-width: 768px) {
+    .column {
         padding-left: 5%;
         padding-right: 5%;
         width: 40%;
     }
-    .h2
-    {
+
+    .h2 {
         font-size: 14px;
     }
-    .footer
-    {
+
+    .footer {
         margin-top: 15%;
     }
 }
 
-@media screen and (max-width: 500px)
-{
-    .column
-    {
+@media screen and (max-width: 500px) {
+    .column {
         padding-left: 0%;
         padding-right: 5%;
         width: 45%;
     }
 }
 
-.profileimg
-{
+.profileimg {
     overflow: hidden;
     height: auto;
     padding-left: auto;
@@ -260,16 +231,14 @@ img.preview-icon {
     width: 30%;
 }
 
-.profilesection
-{
+.profilesection {
     width: 100%;
     overflow: hidden;
     margin-bottom: 2.5%;
     background-color: #e2001a;
 }
 
-.image_collage
-{
+.image_collage {
     line-height: 0;
     -webkit-column-count: 5;
     -webkit-column-gap: 0px;
@@ -279,54 +248,44 @@ img.preview-icon {
     column-gap: 0px;
 }
 
-.image_collage img
-{
+.image_collage img {
     width: 100% !important;
     height: auto !important;
 }
 
-@media (max-width: 1200px)
-{
-    .image_collage
-    {
+@media (max-width: 1200px) {
+    .image_collage {
         -moz-column-count: 4;
         -webkit-column-count: 4;
         column-count: 4;
     }
 }
 
-@media (max-width: 1000px)
-{
-    .image_collage
-    {
+@media (max-width: 1000px) {
+    .image_collage {
         -moz-column-count: 3;
         -webkit-column-count: 3;
         column-count: 3;
     }
 }
 
-@media (max-width: 800px)
-{
-    .image_collage
-    {
+@media (max-width: 800px) {
+    .image_collage {
         -moz-column-count: 2;
         -webkit-column-count: 2;
         column-count: 2;
     }
 }
 
-@media (max-width: 400px)
-{
-    .image_collage
-    {
+@media (max-width: 400px) {
+    .image_collage {
         -moz-column-count: 1;
         -webkit-column-count: 1;
         column-count: 1;
     }
 }
 
-.alphabetpanel
-{
+.alphabetpanel {
     width: 100%;
     float: left;
     border-top: 1px dotted;
@@ -335,10 +294,8 @@ img.preview-icon {
     height: 100%;
 }
 
-@media (min-width:500px)
-{
-    .alphabetimg
-    {
+@media (min-width: 500px) {
+    .alphabetimg {
         position: relative;
         float: none;
         top: 5px;
@@ -347,30 +304,26 @@ img.preview-icon {
     }
 }
 
-.alphabetgrid
-{
+.alphabetgrid {
     width: 100%;
     margin-top: 40px;
     padding-left: auto;
     padding-right: auto;
 }
 
-.latest
-{
+.latest {
     position: relative;
     clear: both;
 }
 
-.latestdiv
-{
+.latestdiv {
     width: 100%;
     position: relative;
     clear: both;
     float: left;
 }
 
-.alphabet
-{
+.alphabet {
     width: 100%;
     margin-bottom: 40px;
     float: left;
@@ -378,25 +331,23 @@ img.preview-icon {
     margin-top: 20PX;
 }
 
-.sponsors
-{
+.sponsors {
     margin-top: 20px;
     clear: both;
     float: left;
 }
 
-.linkimg:hover
-{
+.linkimg:hover {
     filter: invert(70%);
 }
 
 /* tooltips are based on https://designshack.net/articles/css/html5-css3-anchor-link-tooltips/*/
-a.tooltip{
+a.tooltip {
     position: relative;
     display: inline;
 }
 
-a.tooltip:after{
+a.tooltip:after {
     display: block;
     visibility: hidden;
     position: absolute;
@@ -415,7 +366,7 @@ a.tooltip:after{
     font-family: helvetica, arial, san serif;
     text-decoration: none;
     text-align: center;
-    background: rgba(0,0,0,0.85);
+    background: rgba(0, 0, 0, 0.85);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 20px;
@@ -432,45 +383,90 @@ a.tooltip:before {
     content: "";
     border-style: solid;
     border-width: 6px 6px 0 6px;
-    border-color: rgba(0,0,0,0.85) transparent transparent transparent;
+    border-color: rgba(0, 0, 0, 0.85) transparent transparent transparent;
 }
-a.tooltip:hover:after{ visibility: visible; opacity: 1; bottom: 20px; }
-a.tooltip:hover:before{ visibility: visible; opacity: 1; bottom: 14px; }
+
+a.tooltip:hover:after {
+    visibility: visible;
+    opacity: 1;
+    bottom: 20px;
+}
+
+a.tooltip:hover:before {
+    visibility: visible;
+    opacity: 1;
+    bottom: 14px;
+}
 
 /* tips on bottom */
-a.tooltip.bottom:after { bottom: auto; top: 0; }
-a.tooltip.bottom:hover:after { top: 28px; }
+a.tooltip.bottom:after {
+    bottom: auto;
+    top: 0;
+}
+
+a.tooltip.bottom:hover:after {
+    top: 28px;
+}
+
 a.tooltip.bottom:before {
     border-width: 0 5px 8.7px 5px;
-    border-color: transparent transparent rgba(0,0,0,0.85) transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.85) transparent;
     top: 0px
 }
-a.tooltip.bottom:hover:before { top: 20px; }
+
+a.tooltip.bottom:hover:before {
+    top: 20px;
+}
 
 
 /* tips on the right */
-a.tooltip.right:after { left: 100%; bottom: -45%; }
-a.tooltip.right:hover:after { left: 110%; bottom: -45%; }
+a.tooltip.right:after {
+    left: 100%;
+    bottom: -45%;
+}
+
+a.tooltip.right:hover:after {
+    left: 110%;
+    bottom: -45%;
+}
+
 a.tooltip.right:before {
     border-width: 5px 10px 5px 0;
-    border-color: transparent rgba(0,0,0,0.85) transparent transparent;
+    border-color: transparent rgba(0, 0, 0, 0.85) transparent transparent;
     left: 90%;
     bottom: 2%;
 }
-a.tooltip.right:hover:before { left: 100%; bottom: 2%; }
+
+a.tooltip.right:hover:before {
+    left: 100%;
+    bottom: 2%;
+}
 
 
 /* tips on the left */
-a.tooltip.left:after { left: auto; right: 100%; bottom: -45%; }
-a.tooltip.left:hover:after { right: 110%; bottom: -45%; }
+a.tooltip.left:after {
+    left: auto;
+    right: 100%;
+    bottom: -45%;
+}
+
+a.tooltip.left:hover:after {
+    right: 110%;
+    bottom: -45%;
+}
+
 a.tooltip.left:before {
     border-width: 5px 0 5px 10px;
-    border-color: transparent transparent transparent rgba(0,0,0,0.85);
+    border-color: transparent transparent transparent rgba(0, 0, 0, 0.85);
     left: auto;
     right: 90%;
     bottom: 2%;
 }
-a.tooltip.left:hover:before { right: 100%; bottom: 2%; }
+
+a.tooltip.left:hover:before {
+    right: 100%;
+    bottom: 2%;
+}
 
 a.tooltip.animate:after, a.tooltip.animate:before {
     -webkit-transition: all 3s ease-out 0.1s;
@@ -480,31 +476,41 @@ a.tooltip.animate:after, a.tooltip.animate:before {
     transition: all 3s ease-out 0.1s;
 }
 
-@media (max-width:499px)
-{
-    .djsectionmenu500
-    {
+.button.play {
+    background: transparent;
+    box-sizing: border-box;
+    width: 0;
+    height: 18px;
+
+    border-color: transparent transparent transparent #9d9d9d;
+    transition: 100ms all ease;
+    cursor: pointer;
+
+    border-style: solid;
+    border-width: 9px 0 9px 15px;
+}
+
+@media (max-width: 499px) {
+    .djsectionmenu500 {
         height: 70px;
         overflow: hidden;
         min-width: 60px;
         width: 50%;
     }
-    .alphabetimg500
-    {
+
+    .alphabetimg500 {
         height: 100px;
     }
-    .alphabetpanel480down
-    {
+
+    .alphabetpanel480down {
         height: 70px;
         overflow: hidden;
         width: 100px;
     }
 }
 
-@media (max-width:767px)
-{
-    .h1mobile
-    {
+@media (max-width: 767px) {
+    .h1mobile {
         font-size: 18px;
     }
 }
