--- a/templates/latest.xml
+++ b/templates/latest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
-<rss version="2.0">
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
 
 <channel>
+    <atom:link href="https://hotmixes.net/latest.xml" rel="self" type="application/rss+xml" />
     <title>Hotmixes</title>
     <link>https://hotmixes.net</link>
     <description>Our Latest Uploads</description>
