--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -61,6 +61,11 @@
     background: #e2001a;
 }
 
+.amixlinkvideo {
+    color: #000;
+    background-color: #626262;
+}
+
 .body
 {
     width: 80%;
