--- a/templates/view.html
+++ b/templates/view.html
@@ -17,7 +17,11 @@
     <br>
 
 {% for i, file in ipairs(local_files) do %}
-    <a class="amixlink" href="{{ local_path .. file }}">
+    {% if match_video(file) then %}
+        <a class="amixlink amixlinkvideo" href="{{ '/mixes/' .. file }}">
+    {% else %}
+        <a class="amixlink" href="{{ '/mixes/' .. file }}">
+    {% end %}
         <span class="mixlink">{{ file }}</span>
     </a>
     </br>
@@ -30,7 +34,11 @@
         <br>
         <h1 class="h1">Our latest uploads:</h1>
     {% for i, file in ipairs(local_latestpath) do %}
-        <a class="amixlink" href="{{ '/mixes/' .. file }}">
+        {% if match_video(file) then %}
+            <a class="amixlink amixlinkvideo" href="{{ '/mixes/' .. file }}">
+        {% else %}
+            <a class="amixlink" href="{{ '/mixes/' .. file }}">
+        {% end %}
             <span class="mixlink">{{ local_latestname[i] }}</span>
         </a>
         </br>
