--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -62,8 +62,30 @@
 }
 
 .amixlinkvideo {
+    font-family: helvetica;
+    color: #9d9d9d;
+    line-height: 1.6em;
+    font-weight: 600;
+    font-size: 14px;
+    text-decoration: none;
+    background: #111111;
+    display: inline-flex;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding: 2px 10px;
+    border-radius: 20px;
     color: #000;
     background-color: #626262;
+}
+
+.amixlinkvideo:hover
+{
+    font-family: helvetica;
+    color: #000;
+    line-height: 1.6em;
+    font-weight: 600;
+    font-size: 14px;
+    background: #e2001a;
 }
 
 .body
