--- a/templates/head.html
+++ b/templates/head.html
@@ -12,6 +12,6 @@
                 <img src="/img/hotmixeswhite.png" class="hotmixlogo"/>
             </a>
         </header>
-        <h1 class="h1 h1mobile">Tons Of Mix - Downloads & Streams (right click + save as for downloads)<br>
-            Welcome to Hotmixes.net (Beta) - The CBS / Intergalactic FM Archives<br>
+        <h1 class="h1 h1mobile">Tons Of Mix - Downloads & Streams (right click + Save link as... for downloads)<br>
+            Welcome to Hotmixes.net - The CBS / Intergalactic FM Archives<br>
             Sharing {{ local_total[0] }} files</h1>
