--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -112,7 +112,7 @@
 {
     width: 100%;
     height: 250px;
-    border-top: 2PX SOLID #e2001a;
+    border-top: 2px solid #e2001a;
     float: left;
     clear: both;
 }
@@ -122,7 +122,7 @@
     font-family: staatliches;
     font-size: 18px;
     text-decoration: inherit;
-    color: e2001a;
+    color: #e2001a;
 }
 
 .djsectionmenu
@@ -369,7 +369,7 @@
     margin-bottom: 40px;
     float: left;
     clear: both;
-    margin-top: 20PX;
+    margin-top: 20px;
 }
 
 .sponsors
