--- a/templates/latest.xml
+++ b/templates/latest.xml
@@ -10,7 +10,7 @@
     <item>
         <title>{{ local_latestname[i] }}</title>
         <link>{{ 'https://hotmixes.net/mixes/' .. file }}</link>
-        <description>{{ local_latestname[i] }}</description>
+        <description><![CDATA[{{ local_latestname[i] }}]]></description>
         <guid>{{ 'https://hotmixes.net/mixes/' .. file }}</guid>
     </item>
     {% end %}
