--- a/templates/head.html
+++ b/templates/head.html
@@ -3,6 +3,7 @@
     <head>
         <title>Hotmixes.net</title>
         <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
+        <meta charset="utf-8"/>
         <style>
             @import url('https://fonts.googleapis.com/css?family=Staatliches');
         </style>
