--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -490,6 +490,20 @@ a.tooltip.animate:after, a.tooltip.animate:before {
     border-width: 9px 0 9px 15px;
 }
 
+.button.paused {
+    background: transparent;
+    box-sizing: border-box;
+    width: 0;
+    height: 18px;
+
+    border-style: solid;
+    border-width: 0px 0 0px 15px;
+}
+
+.button:hover {
+    border-color: transparent transparent transparent #404040;
+}
+
 @media (max-width: 499px) {
     .djsectionmenu500 {
         height: 70px;
