fixed css color, footer copyright and test doc

--- a/style/hotmixstyle.css
+++ b/style/hotmixstyle.css
@@ -150,7 +150,7 @@
 {
     font-family: Staatliches;
     font-size: 33px;
-    color: e2001a;
+    color: #e2001a;
     line-height: 1em;
     margin-bottom: 0px;
     margin-top: 0px;
