--- a/templates/foot.html
+++ b/templates/foot.html
@@ -37,7 +37,7 @@
             <a href="/">
                 <img src="/img/hotmixgrey.png" alt="Hotmix logo" class="hotmixlogo"/>
             </a>
-            <p class="p footerlegal">Copyright Hotmix Foundation / IFMX 2020</p>
+            <p class="p footerlegal">© Hotmix Foundation / IFMX 2020 – 2021</p>
         </footer>
     </body>
 </html>
