--- a/templates/head.html
+++ b/templates/head.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-    <head>
-        <title>Hotmixes.net</title>
-        <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
-        <meta charset="utf-8"/>
-        <style>
-            @import url('https://fonts.googleapis.com/css?family=Staatliches');
-        </style>
-    </head>
-    <body class="body">
+<head>
+    <title>Hotmixes.net</title>
+    <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8"/>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Staatliches');
+    </style>
+</head>
+<body class="body">
         <header class="header">
             <a href="/">
                 <img src="/img/hotmixeswhite.png" alt="Hotmix logo" class="hotmixlogo"/>
