add xml:lang to html element to fix a warning about possible xml processing

--- a/templates/head.html
+++ b/templates/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
     <title>Hotmixes.net</title>
     <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body class="body">
-        <header class="header">
+<header class="header">
             <a href="/">
                 <img src="/img/hotmixeswhite.png" alt="Hotmix logo" class="hotmixlogo"/>
             </a>
