--- a/templates/head.html
+++ b/templates/head.html
@@ -3,6 +3,7 @@
 <head>
     <title>Hotmixes.net</title>
     <link href="/style/hotmixstyle.css" rel="stylesheet" type="text/css">
+    <script src="/js/search.js"></script>
     <meta charset="utf-8"/>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Staatliches');
@@ -10,9 +11,9 @@
 </head>
 <body class="body">
 <header class="header">
-            <a href="/">
-                <img src="/img/hotmixeswhite.png" alt="Hotmix logo" class="hotmixlogo"/>
-            </a>
+    <a href="/">
+        <img src="/img/hotmixeswhite.png" alt="Hotmix logo" class="hotmixlogo"/>
+    </a>
         </header>
         <h1 class="h1 h1mobile">Tons Of Mix - Downloads & Streams (right click + Save link as... for downloads)<br>
             Welcome to Hotmixes.net - The CBS / Intergalactic FM Archives<br>
