--- a/templates/viewsearch.html
+++ b/templates/viewsearch.html
@@ -1,6 +1,15 @@
 {(head.html)}
-<div class="all_files">
+<section class="search">
+    <div class="searchpanel">
+        <form id="searchForm">
+            <input id="searchText" type="text"/>
+            <button type="submit" onclick="doSearch(document.getElementById('searchText').value)">Search</button>
+        </form>
+    </div>
+</section>
 
+<div class="all_files">
+    <h1 class="h1">Search results:</h1>
     {% for i, file in ipairs(local_files) do %}
     <a class="amixlink" href="{{ local_path .. file }}">
         <span class="mixlink">{{ file }}</span>
